add url shortener endpoints
