# socialapp/pkg/db/models.go
@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.15.0
+//   sqlc v1.16.0
 
 package db
 
@@ -69,6 +69,15 @@ type TokensToScope struct {
 	ID      int64 `json:"id"`
 	TokenID int64 `json:"token_id"`
 	ScopeID int64 `json:"scope_id"`
+}
+
+type Url struct {
+	ID        int64        `json:"id"`
+	Url       string       `json:"url"`
+	Alias     string       `json:"alias"`
+	CreatedAt time.Time    `json:"created_at"`
+	UpdatedAt time.Time    `json:"updated_at"`
+	DeletedAt sql.NullTime `json:"deleted_at"`
 }
 
 type User struct {
